Version 1.0.2, new feature, maven build, bug fix